src/patternfly/components/ChipGroup/chip-group.scss
.pf-c-chip-group {
  @include pf-t-light; // force the container follow the light theme

  // Category
  --pf-c-chip-group--m-category--PaddingTop: calc(var(--pf-global--spacer--xs) / 2);
  --pf-c-chip-group--m-category--PaddingRight: var(--pf-global--spacer--xs);
  --pf-c-chip-group--m-category--PaddingBottom: calc(var(--pf-global--spacer--xs) / 2);
  --pf-c-chip-group--m-category--PaddingLeft: var(--pf-global--spacer--sm);
  --pf-c-chip-group--m-category--BorderRadius: var(--pf-global--BorderRadius--sm);
  --pf-c-chip-group--m-category--BackgroundColor: var(--pf-global--BackgroundColor--200);

  // Label in group
  --pf-c-chip-group__label--PaddingTop: var(--pf-global--spacer--xs);
  --pf-c-chip-group__label--PaddingRight: var(--pf-global--spacer--sm);
  --pf-c-chip-group__label--PaddingBottom: var(--pf-global--spacer--xs);
  --pf-c-chip-group__label--FontSize: var(--pf-global--FontSize--sm);
  --pf-c-chip-group__label--Maxwidth: #{pf-size-prem(160px)};

  // Chip group close
  --pf-c-chip-group__close--MarginTop: calc(var(--pf-global--spacer--xs) * -1);

  // Chip
  --pf-c-chip-group--c-chip--MarginRight: var(--pf-global--spacer--xs);
  --pf-c-chip-group--c-chip--MarginTop: calc(var(--pf-global--spacer--xs) / 2);
  --pf-c-chip-group--c-chip--MarginBottom: calc(var(--pf-global--spacer--xs) / 2);

  &.pf-m-category {
    padding-top: var(--pf-c-chip-group--m-category--PaddingTop);
    padding-right: var(--pf-c-chip-group--m-category--PaddingRight);
    padding-bottom: var(--pf-c-chip-group--m-category--PaddingBottom);
    padding-left: var(--pf-c-chip-group--m-category--PaddingLeft);
    background-color: var(--pf-c-chip-group--m-category--BackgroundColor);
    border-radius: var(--pf-c-chip-group--m-category--BorderRadius);
  }

  .pf-c-chip {
    margin-top: var(--pf-c-chip-group--c-chip--MarginTop);
    margin-right: var(--pf-c-chip-group--c-chip--MarginRight);
    margin-bottom: var(--pf-c-chip-group--c-chip--MarginBottom);

    &:last-child {
      --pf-c-chip-group--c-chip--MarginRight: 0;
    }
  }
}

.pf-c-chip-group,
.pf-c-chip-group__list-item {
  display: inline-flex;
  flex-wrap: wrap;
  align-items: center;
}

.pf-c-chip-group__list-item {
  margin-bottom: var(--pf-c-chip-group__list-item--MarginBottom);
}

.pf-c-chip-group__label {
  @include pf-text-overflow;

  max-width: var(--pf-c-chip-group__label--Maxwidth);
  padding-top: var(--pf-c-chip-group__label--PaddingTop);
  padding-right: var(--pf-c-chip-group__label--PaddingRight);
  padding-bottom: var(--pf-c-chip-group__label--PaddingBottom);
  font-size: var(--pf-c-chip-group__label--FontSize);
}

.pf-c-chip-group__close {
  margin-top: var(--pf-c-chip-group__close--MarginTop);
}

